# ChangeLog for media-video/makemkv
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*makemkv-1.6.10 (11 Jun 2011)

  11 Jun 2011; Steve Dibb <beandog@gentoo.org> -makemkv-1.5.6.ebuild,
  -makemkv-1.5.8.ebuild, -makemkv-1.6.9.ebuild, +makemkv-1.6.10.ebuild:
  Version bump; Remove old

  09 Jun 2011; Steve Dibb <beandog@gentoo.org> makemkv-1.6.9.ebuild:
  Version bump

*makemkv-1.5.8 (23 Aug 2010)

  23 Aug 2010; Steve Dibb <beandog@gentoo.org> +makemkv-1.5.8.ebuild:
  Version bump
