@@ -1,5 +1,8 @@
 DIST makemkv_v1.6.10_bin.tar.gz 5690301 RMD160 4d6abcc30e8c73e74f7131212e9cf50e081d7968 SHA1 606ebe13028c24590438b1df193cea7d7d1afdc4 SHA256 949638018fbe1a9f7bd2594c488f653d74d26be835357bc76a3bcf43d8ccbae6
 DIST makemkv_v1.6.10_oss.tar.gz 434907 RMD160 033802eaecff32fdfae304cdfb3536413f115b20 SHA1 2bac0028d5f249b2253651f9c04eecb185043613 SHA256 895576c50435afae47f36f686c76828973034f882cb4e9b9ed5f73f4e0039d3c
+DIST makemkv_v1.6.12_bin.tar.gz 5691404 RMD160 1c39d8669e71998c8f5abed7d45c7867db2a7b18 SHA1 eeeb0d694b83f7e8304c94b32b2f7ead12c51e8c SHA256 e39c75c1262af99b908701eaffe4a6b6a10f33f84390cbf2ac7fb0ab5a7e38ee
+DIST makemkv_v1.6.12_oss.tar.gz 437017 RMD160 964d213d98cce2296e29ceb322407d17544158fd SHA1 b3a8827b094eddc162b7a73ba217771880b0ba49 SHA256 c42664019dcc1d6274960e959cb4b5dcfacf592ba3306b01eec144e5b49b34a9
 EBUILD makemkv-1.6.10.ebuild 1581 RMD160 70fdd8476bd18b3932b0d14545d46680ecd5336b SHA1 53bd284b4f749a43b1ab3550e98817a110f57659 SHA256 ed1eac76287d6df7983477afce7ff32c060b57efd2d0b3cf7e7d58d4c1421ec4
-MISC ChangeLog 522 RMD160 ff3f1076a1129189ac7579d7d32653e94840f8b4 SHA1 b0bbaa11da3fe38d03ad7a77af2a4a020d45dc3a SHA256 199e0f8df9446a230ca10ace6a167d4cb8c9e044b607c3f65e3642ea6839af52
+EBUILD makemkv-1.6.12.ebuild 1580 RMD160 1f87caf62265829403bbf3baab004bc53d2d593e SHA1 90fdcc7bdf1356814482c70a0975b9e704e29b47 SHA256 5b0b7214275acbe4c8037429ca0858e3942c507323376f9318b47bd4a538e5a5
+MISC ChangeLog 652 RMD160 fc29c8a118d141436340a5c52b44eba86a8e0b4b SHA1 acade4440ca4b8322e84ef57384051e851635e3d SHA256 c571f1bf3af8286042515531599124a2b952d6ca0e5c6e543870474a4a1ca41e
 MISC metadata.xml 224 RMD160 71a1b9f875b9de0f7a9f0dd00557874d936c5021 SHA1 2bca68cdbca3845abaaa36497a91b789eb1a89d0 SHA256 98cfdec9b1c16d801783412e122d81d3a42627c9b9595f5f8d0d8bf5ecb33e32
