@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*makemkv-1.6.12 (12 Jul 2011)
+
+  12 Jul 2011; Steve Dibb <beandog@gentoo.org> +makemkv-1.6.12.ebuild:
+  Version bump, bug 280347
+
 *makemkv-1.6.10 (11 Jun 2011)
 
   11 Jun 2011; Steve Dibb <beandog@gentoo.org> -makemkv-1.5.6.ebuild,
